Updated seed file and reviews table/api routes

--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,11 @@ form div {
   font-family: 'Dancing Script', cursive;
 }
 
+.subtitle {
+  font-size: 200%;
+  font-family: 'Dancing Script', cursive;
+}
+
 .thumbnail .title {
   font-size: 200%;
   font-family: 'Dancing Script', cursive;
