did some styling

--- a/public/style.css
+++ b/public/style.css
@@ -45,3 +45,27 @@ form div {
   font-size: 200%;
   font-family: 'Dancing Script', cursive;
 }
+
+.authInputs {
+  width: 100%;
+}
+
+.inputContainer {
+  width: 80%;
+}
+
+.googleButton {
+  margin-left: 14%;
+}
+
+.authButtons {
+  display: inline;
+}
+
+.unauthButtons {
+  display: inline;
+}
+
+.navButton {
+  background-color: rgb(32, 108, 153);
+}
